--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,15 +1,28 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
+<div class="w-full max-w-2xl mx-auto">
     <% if notice.present? %>
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
 
+    <%= link_to "Edit this project", edit_project_path(@project), class: "underline mt-2 rounded-lg py-3 px-5 inline-block font-medium" %>
+
     <%= render @project %>
 
-    <%= link_to "Edit this project", edit_project_path(@project), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to projects", projects_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this project", @project, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <% if user_signed_in? %>
+      <%= form_for [@project, @new_comment] do |form| %>
+        <div class="mb-4">
+          <%= form.text_area :body, class: "form-control", placeholder: "Add a comment..." %>
+        </div>
+        <%= form.hidden_field :project_id, value: @project.id %>
+        <%= form.submit "Add Comment", class: "cursor-pointer bg-purple-700 hover:bg-purple-800 text-white font-bold py-2 px-4 rounded" %>
+      <% end %>
+    <% else %>
+    <div class="my-4 p-8 border border-gray-300 border-dotted">To comment, please <%= link_to "log in", new_user_session_path, class: "text-blue-500 hover:text-blue-700" %> or <%= link_to "sign up", new_user_registration_path, class: "text-blue-500 hover:text-blue-700" %>.</div>
+    <% end %>
+    <%= turbo_stream_from @project %>
+    <div id="updates">
+      <% @updates.each do |update| %>
+        <%= render partial: "update", locals: { update: update } %>
+      <% end %>
     </div>
-  </div>
+
 </div>
