--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,27 @@
-<div class="w-full">
+<div class="">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
   <% content_for :title, "Projects" %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Projects</h1>
-    <%= link_to "New project", new_project_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  <div class="my-4 flex justify-between items-center">
+    <%= link_to "New project", new_project_path, class: "py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="projects" class="min-w-full">
     <% @projects.each do |project| %>
-      <%= render project %>
-      <p>
-        <%= link_to "Show this project", project, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
+      <div class="bg-gray-100 px-4 p-6 mb-4">
+        <div class="text-gray-700 font-bold text-2xl">
+          <%= link_to project.name, project %>
+        </div>
+        <div class="text-gray-700 my-4">
+          <%= project.status_display %>
+        </div>
+        <div class="text-gray-700 underline">
+          <%= link_to "View History", project, class: "font-medium" %>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
