--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,7 +19,7 @@
     <div class="my-4 p-8 border border-gray-300 border-dotted">To comment, please <%= link_to "log in", new_user_session_path, class: "text-blue-500 hover:text-blue-700" %> or <%= link_to "sign up", new_user_registration_path, class: "text-blue-500 hover:text-blue-700" %>.</div>
     <% end %>
     <%= turbo_stream_from @project %>
-    <div id="updates">
+    <div id="updates" class="mt-8">
       <% @updates.each do |update| %>
         <%= render partial: "update", locals: { update: update } %>
       <% end %>
